[package]
name = "pre-commit-sort"
version = "0.2.0"
edition = "2021"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
description = "Sort pre-commit files"
keywords = ["yaml", "serde", "serialization", "ci", "pre-commit"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nim65s/pre-commit-sort"

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.198", features = ["derive"] }
serde_with = "3.8.3"
serde_yaml = "0.9.34"
thiserror = "1.0.61"

[dev-dependencies]
indoc = "2.0.5"

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/predicates-rs/compare/{{tag_name}}...HEAD", exactly=1},
  {file="README.md", search="rev: v.*", replace="rev: v{{version}}"},
]
