[package]
name = "pre-commit-sort"
version = "0.4.0"
edition = "2021"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
description = "Sort pre-commit files"
keywords = ["yaml", "serde", "serialization", "ci", "pre-commit"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nim65s/pre-commit-sort"

[dependencies]
anyhow = "1.0.96"
serde = { version = "1.0.218", features = ["derive"] }
serde_with = "3.12.0"
serde_yaml = "0.9.34"
thiserror = "2.0.12"

[dev-dependencies]
indoc = "2.0.5"

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/nim65s/pre-commit-sort/compare/{{tag_name}}...HEAD", exactly=1},
  {file="README.md", search="rev: v.*", replace="rev: v{{version}}"},
  {file="default.nix", search="version = \".*\";", replace="version = \"{{version}}\";"},
]
